-2014-05-06 Christophe Monard  <contact@cmonard.fr>
        * Added possibility to change sort field in list mode: mod.web_list.alternateSortingField.table = field ASC/DESC

2014-03-27 Christophe Monard  <contact@cmonard.fr>
        * Custom Button List upgraded with 6.2 code
        * new Api function addPItoST43for6x wich replace filename with namespace to declare plugin (same namespace write than in makeInstance, don't forget to double \ )

2014-03-24 Christophe Monard  <contact@cmonard.fr>
        * Added class alias map migration code
        * Bugfix on eID backend user retrieve
        * Bugfix on 6.2 version of TYPO3 for some functions
        * Change state to stable

2014-03-22 Christophe Monard  <contact@cmonard.fr>
        * Reformat of files
        * Sonar test corrections

2014-02-21 Christophe Monard  <contact@cmonard.fr>
        * Modification on Scheduler, if interval and cron not specified, interval will be forced to 60 seconds
        * Bugfix when trying to get Language Overlay of a page when using generateMarkersFromTableRow function

2014-02-04 Christophe Monard  <contact@cmonard.fr>
        * Remove Deprecated function
        * Bugfix with pagebrowser function and some PHP version, parameter name not set correctly
        * Improve quoteForLike with new arguments to improve it's flexibility
        * New function to easily handle (get or set) cookie or session data in the Api
        * New class to easily handle Scheduler manipulation (but need to be tested correctly :) )

2013-11-22 Christophe Monard  <contact@cmonard.fr>
        * WARNING : Breaking update !
        * Remove compatibility with TYPO3 v4.
        * Update php compatiblity to 5.3.7
        * Update TYPO3 compatiblity to 6.0.0-6.2.99
        * Update extension version to 6.0.0
        * Set status back to Beta (some function need to be tested again)
        * TODO: Remove declaration for "rlmp_dateselect" not officialy compatible with TYPO3 v6